--- a/src/homeScreen/dialogs/EncounterConfigDialog.module.css
+++ b/src/homeScreen/dialogs/EncounterConfigDialog.module.css
@@ -1,10 +1,4 @@
-.formLabel {
-  display: inline-block;
-  min-width: 20%;
-  vertical-align: top;
-  margin-right: 2%;
-}
-
 .formInput {
-  width: 78%;
+  width: 100%;
+  min-height: 50vh
 }
