--- a/src/homeScreen/HomeScreen.module.css
+++ b/src/homeScreen/HomeScreen.module.css
@@ -5,16 +5,16 @@
   row-gap: 0;
   grid-template-rows: 10vh calc(80vh - 1rem) 10vh 1vh;
   grid-template-columns: 1fr 8fr 1fr;
-  grid-template-areas: 
-          "header header header"
-          ". content right-panel" 
-          "footer footer footer"
-          "avoid-overflow avoid-overflow avoid-overflow";
+  grid-template-areas:
+    "header header header"
+    ". content right-panel"
+    "footer footer footer"
+    "avoid-overflow avoid-overflow avoid-overflow";
 }
 
 @media only screen and (max-width: 600px) {
   .container {
-      grid-template-columns: 0fr 1fr 0fr;
+    grid-template-columns: 0fr 1fr 0fr;
   }
 }
 
@@ -26,7 +26,7 @@
   align-items: center;
 }
 
-.header > h1 {
+.header>h1 {
   -webkit-text-fill-color: white;
   -webkit-text-stroke-width: .1vw;
   -webkit-text-stroke-color: #222222;
@@ -36,9 +36,10 @@
   text-align: center;
   font-size: 4vh;
 }
+
 @media only screen and (max-width: 600px) {
-  .header > h1 {
-      font-size: 3vh;
+  .header>h1 {
+    font-size: 3vh;
   }
 }
 
@@ -47,30 +48,43 @@
   padding: 3vh;
   align-self: center;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+  overflow: hidden;
 }
 
-.content > p {
+.content>p {
   font-size: 2vh;
   text-align: center;
   padding-bottom: 1vh;
+  flex-shrink: 0;
 }
 
-.content > h1 {
-  color: #666;
-  background-color: #ededed;
+.content>h1 {
+  color: white;
+  background-color: black;
   border-top-left-radius: 2vh;
   border-top-right-radius: 2vh;
   font-size: 1.5vh;
   letter-spacing: .8vh;
-  font-weight: normal;
+  font-weight: bold;
   text-align: center;
-  margin-top: 2vh;
+  margin-top: 0;
+  padding-top: 0.5vh;
+  padding-bottom: 0.5vh;
+  /* Updated from 2vh to fit better */
+  flex-shrink: 0;
 }
 
 .chat {
   width: 100%;
-  height: 80vh;
+  height: auto;
+  flex-grow: 1;
+  min-height: 0;
   background-color: black;
+  display: flex;
+  flex-direction: column;
 }
 
 .encounterActions {
@@ -83,13 +97,14 @@
   border-color: #aaa;
   border-width: .2vh;
   border-style: solid;
-  border-right-style: none;;
+  border-right-style: none;
+  ;
 }
 
-.encounterActions > h1 {
+.encounterActions>h1 {
   font-size: 1.5vh;
   text-align: center;
   color: #888;
   margin-bottom: 1vh;
-  
+
 }
